<resources>
    <string name="add_time">Add 10 Minutes</string>
    <string name="app_name">Dog on the Quad</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_meetup">Cancel Meetup</string>
    <string name="confirm">Confirm</string>
    <string name="continue_meetup">Continue Meetup</string>
    <string name="continue_review">Continue Review</string>
    <string name="create_meetup_button_label">Create Meetup</string>
    <string name="create_meetup_end_time_title"><u>Meetup End Time</u></string>
    <string name="create_meetup_end_time_desc">Select what time the meetup will end</string>
    <string name="create_meetup_location_title"><u>Meetup Location</u></string>
    <string name="create_meetup_location_desc">Drag the pin to set the location for the meetup</string>
    <string name="create_meetup_photo_desc">Try to include landmarks and your dog so that users can easily find you</string>
    <string name="create_meetup_photo_open_camera">Take photo</string>
    <string name="create_meetup_review_title"><u>Confirm Meetup</u></string>
    <string name="create_meetup_review_desc">Double check that everything looks right for your meetup</string>
    <string name="create_meetup_select_dogs_desc">Select which dogs will be with you at the meetup. This will let everyone else know who will be there.</string>
    <string name="create_meetup_select_dogs_title"><u>Select Dogs</u></string>
    <string name="create_meetup_social_level_title"><u>Attendance</u></string>
    <string name="create_meetup_social_level_description">Select how many people you would like to attend your meetup. Although we can\'t guarantee the minimum number people will show up, we\'ll do our best to make sure no more than the maximum will.</string>
    <string name="create_meetup_photo_title"><u>Dog Snapshot</u></string>
    <string name="dogs">Dogs:</string>
    <string name="dogs_petted">Dogs petted:</string>
    <string name="dogs_profile">Dogs</string>
    <string name="dog_button_label">🐕</string>
    <string name="edit">Edit</string>
    <string name="edit_location">Edit Location</string>
    <string name="edit_settings">Edit Settings</string>
    <string name="end_meetup">End Meetup</string>
    <string name="end_time">End Time:</string>
    <string name="get_directions">GET DIRECTIONS</string>
    <string name="im_going">I\'m Going</string>
    <string name="meetups_attended">Meetups attended:</string>
    <string name="meetups_created">Meetups created:</string>
    <string name="meetup_in_progress"><u>Meetup In Progress</u></string>
    <string name="minutes_left">Minutes Left</string>
    <string name="next">Next</string>
    <string name="people_met">People met:</string>
    <string name="placeholder_num">0</string>
    <string name="return_to_edit">Confirm Change</string>
    <string name="social_level">Social Level:</string>
    <string name="social_level_high">11–20 People</string>
    <string name="social_level_low">1–5 People</string>
    <string name="social_level_medium">6–10 People</string>
    <string name="placeholder_profile_name">Donnie Doggo</string>
    <string name="placeholder_dog_name">Dexter</string>
    <string name="placeholder_dog_breed">Border Collie</string>
    <string name="placeholder_dog_score">10/10</string>
    <string name="stats">Stats</string>
    <string name="users_visiting">Users on the way</string>
    <string name="user_since">User since:</string>
</resources>
