<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <LinearLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/topbar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_meetup_social_level_title"
            android:id="@+id/create_meetup_social_level_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_meetup_social_level_description"
            android:layout_below="@id/create_meetup_social_level_title"
            android:id="@+id/create_meetup_social_level_desc"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerHorizontal="true"/>
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content"
        android:id="@+id/radio_group"
        android:layout_below="@id/topbar">

        <RadioButton
            android:id="@+id/low_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#3F51B5"
            android:buttonTint="#FFC107"
            android:text="@string/social_level_low" />

        <RadioButton
            android:id="@+id/medium_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#3F51B5"
            android:buttonTint="#FFC107"
            android:text="@string/social_level_medium" />

        <RadioButton
            android:buttonTint="#FFC107"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#3F51B5"
            android:id="@+id/high_button"
            android:text="@string/social_level_high"/>

    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:id="@+id/create_meetup_progress_controls"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/back_button"
            android:textColor="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/back"/>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:id="@+id/meetup_progress_bar"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:id="@+id/meetup_next_button"
            android:text="@string/next"/>

    </LinearLayout>

</RelativeLayout>