<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CreateMeetupReviewActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/image_view"
        />

    <Button
        android:id="@+id/edit_location_button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:backgroundTint="#2196F3"
        android:text="@string/edit_location"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/end_time_text"
            android:layout_marginLeft="20dp"
            android:textColor="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/end_time"/>

        <Button
            android:id="@+id/edit_end_time_button"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:layout_marginRight="20dp"
            android:backgroundTint="#2196F3"
            android:text="@string/edit"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/social_level_text"
            android:layout_marginLeft="20dp"
            android:textColor="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/social_level"/>

        <Button
            android:id="@+id/edit_social_level_button"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:layout_marginRight="20dp"
            android:backgroundTint="#2196F3"
            android:text="@string/edit"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dogs_text"
            android:layout_marginLeft="20dp"
            android:textColor="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/dogs"/>

        <Button
            android:id="@+id/edit_dogs_button"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:layout_marginRight="20dp"
            android:backgroundTint="#2196F3"
            android:text="@string/edit"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#FFFFFF"
            android:backgroundTint="#2196F3"
            android:layout_weight="1"
            android:text="@string/cancel"/>

        <ProgressBar
            android:id="@+id/meetup_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            style="@android:style/Widget.ProgressBar.Horizontal"/>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#FFFFFF"
            android:backgroundTint="#2196F3"
            android:layout_weight="1"
            android:text="@string/confirm"/>

    </LinearLayout>

</LinearLayout>