<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CreateMeetupPhotoActivity">





    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textColor="#FFFFFF"
        android:text="@string/create_meetup_photo_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/create_meetup_photo_desc"/>
    <!--
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textColor="#FFFFFF"
        android:text="@string/create_meetup_photo_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/create_meetup_photo_desc"
        android:text="@string/create_meetup_photo_desc"/>

        -->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_below="@id/create_meetup_photo_desc"
        android:layout_above="@id/create_meetup_progress_controls"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <TextureView
            android:id="@+id/camera_preview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/create_meetup_progress_controls"
        android:gravity="center">

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:backgroundTint="#2196F3"
            android:layout_weight="1"
            android:text="@string/back"/>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:id="@+id/meetup_progress_bar"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:backgroundTint="#2196F3"
            android:layout_weight="1"
            android:id="@+id/capture_button"
            android:text="Capture"/>

    </LinearLayout>

</RelativeLayout>